@@ -1,5 +1,5 @@
 AUX configure.py.patch 1582 RMD160 f32260fa941070356a21fb98c749436c89f9ea71 SHA1 7dc0aa5d30ad15c43e4e303d1f26735e710a4d26 SHA256 dbd98df4abb88791f45cd5a896ab2d0fadd6f77935d37d318f8ef05f984b313d
-DIST PyQt-x11-gpl-4.5.5-snapshot-20090730.tar.gz 6843141 RMD160 2bc3c78c18afc62c678baea718a8205f906cff42 SHA1 3fb08ca605d885d085056d2776f2b64f27017cb3 SHA256 659605ad19686b860eb23857459bd6142dd30afc4ffa05a2295b0e119f44591c
-EBUILD PyQt4-4.5.5_pre20090730.ebuild 4054 RMD160 bf393578dab9815dfa23bd1a7ea41b0ed1a29607 SHA1 093df9f2f9f7aebef4db254eb118a5fa666a84f1 SHA256 5ea5151234d39a16e3432a6254627cd1d42d927ea3ba856457f375708a681873
-MISC ChangeLog 8607 RMD160 ae4cbc03380834639fb7fbc834a1d59bb2e3cbb6 SHA1 ea83a9f10d4d3f46d28b839988e62dfee80628ae SHA256 65f48cfb4a1188d6597708ccfc53b33150ad2a4475e63f9da900bdcf655e6937
+DIST PyQt-x11-gpl-4.5.5-snapshot-20090805.tar.gz 6844044 RMD160 d70ad79df528a056b473bd1467d9f8fc3f637703 SHA1 7f6679c8fdbb7ffb0322618457aecdfc129dbdb8 SHA256 3583913ffe6e900a0c84d6dd318db95e195e6b693c4746c42477a7e6f17cfbf7
+EBUILD PyQt4-4.5.5_pre20090805.ebuild 4260 RMD160 bf3ec4f6ca0ad1aded4b1b88e77171eb93329045 SHA1 3e2174c7d5f3b27fbb309f17612deaa4e47a61b7 SHA256 f64818ef51d31b99a52c4ad0f6c1ea42571d64b72a1e006fc1c9401f58b2cdbd
+MISC ChangeLog 8812 RMD160 a5b4873c1ef330d7690163f8edda26995c05513c SHA1 7520a99d1d257d56dc643d9fd17e76705410a179 SHA256 e2a31a0dd9436780396b096f9e9454d1a429c5e3b3d3ebabd6fdde4abacab843
 MISC metadata.xml 642 RMD160 0a9271db6e18561fdd834d054186fbb0445fc19b SHA1 27ab2a924dff45be4cef4efaa01a67bbe3bff2c7 SHA256 002a5a6bb12da2ef8b9e7b22541922ff4e92d7c1ae1d82c29bbd2c6c7faeb91c
