@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*PyQt4-4.5.5_pre20090805 (06 Aug 2009)
+
+  06 Aug 2009; Markos Chandras <hwoarang@gentoo.org>
+  -PyQt4-4.5.5_pre20090730.ebuild, +PyQt4-4.5.5_pre20090805.ebuild:
+  New snapshot. Synced with portage ebuild
+
   05 Aug 2009; Markos Chandras <hwoarang@gentoo.org> -PyQt4-4.5.4-r1.ebuild:
   On tree
 
